--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
     <meta name="theme-color" content="#D90A52">
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://kit.fontawesome.com/23a7bf8149.js" crossorigin="anonymous"></script>
     <title></title>
   </head>
   <body>
