feat: added jsdoc and clean up

--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="src/css/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Plus+Jakarta+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
-    <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
-    <meta name="theme-color" content="#D90A52">
-    <script type="module" src="/src/main.tsx"></script>
-    <script src="https://kit.fontawesome.com/23a7bf8149.js" crossorigin="anonymous"></script>
-    <title></title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <title>StayFindr | Unique Stays & More</title>
+  <meta name="description" content="Discover and book unique stays across Norway and beyond. StayFindr connects travelers with memorable venues hosted by trusted managers.">
+  <meta name="keywords" content="stay, booking, unique stays, Norway travel, holiday rentals, vacation venues, airbnb alternative, travel platform">
+  <meta name="author" content="Panida Paethanom">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
+  <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
+  <meta name="theme-color" content="#D90A52" />
+  <meta property="og:title" content="StayFindr | Unique Stays & More" />
+  <meta property="og:description" content="Discover and book unique stays across Norway and beyond." />
+  <meta property="og:image" content="/assets/preview.jpg" />
+  <meta property="og:url" content="https://stayfindr.netlify.app/" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="StayFindr | Unique Stays & More" />
+  <meta name="twitter:description" content="Discover and book unique stays across Norway and beyond." />
+  <link rel="stylesheet" href="src/css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Plus+Jakarta+Sans:wght@300;400;500;600&display=swap" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/23a7bf8149.js" crossorigin="anonymous"></script>
+  <script type="module" src="/src/main.tsx"></script>
+</head>
+
   <body>
     <div id="root"></div>
     <div id="portal-root"></div>
